# pi-timer

./: CMakeLists.txt  Makefile  README.md  configure.sh
src/: CMakeLists.txt  install.sh  main.c  pi-timer-start.sh  pi-timer.sh  pi_string.c  pi_string.h  pi_strmap.c  pi_strmap.h  pi_timer_gpio.c  pi_timer_gpio.h  pi_timer_server.c  pi_timer_server.h  pi_timer_settings.c  pi_timer_settings.h  pi_utils.c  pi_utils.h  pitimer.sh  version_config.h.in
